add es6 modules

--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -1,8 +1,9 @@
 service: product-service
+frameworkVersion: '3'
 
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs14.x
   stage: dev
   region: eu-west-1
 
@@ -10,19 +11,16 @@ functions:
   getProductsList:
     handler: handlers/getProductsList.getProductsList
     events:
-     - http:
-        path: products
-        method: get
-        cors: true
+     - httpApi:
+        method: GET
+        path: /products
+
   getProductById:
     handler: handlers/getProductById.getProductById
     events:
-     - http:
-        path: products/{productId}
-        method: get
-        request:
-          parameters:
-            paths:
-              productId: true
+     - httpApi:
+        method: GET
+        path: /products/{productId}
+
 
   
