add createProduct lambda func, update products api

--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -1,5 +1,8 @@
 service: product-service
 frameworkVersion: '3'
+useDotenv: true
+plugins:
+  - serverless-dotenv-plugin
 
 provider:
   name: aws
@@ -8,6 +11,8 @@ provider:
   region: eu-west-1
   httpApi:
     cors: true
+  environment:
+    REGION: ${self:provider.region}
 
 functions:
   getProductsList:
@@ -16,13 +21,24 @@ functions:
      - httpApi:
         method: GET
         path: /products
-
+    environment:
+      ProductsTableName: ${env:PRODUCTS_TABLE}
+      StockTableName: ${env:STOCK_TABLE}
   getProductById:
     handler: handlers/getProductById.getProductById
     events:
      - httpApi:
         method: GET
         path: /products/{productId}
-
+    environment:
+      ProductsTableName: ${env:PRODUCTS_TABLE}
+  createProduct:
+    handler: handlers/createProduct.createProduct
+    events:
+     - httpApi:
+        method: POST
+        path: /products
+    environment:
+      ProductsTableName: ${env:PRODUCTS_TABLE}
 
   
