--- a/product-service/package.json
+++ b/product-service/package.json
@@ -2,12 +2,19 @@
   "name": "product-service",
   "version": "1.0.0",
   "description": "",
-  "main": "fetchProducts.js",
+  "main": "awsDocClient.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "sls deploy"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "aws-sdk": "^2.1328.0",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "serverless-dotenv-plugin": "^4.0.2"
+  }
 }
