implement sqs and sns functionality

--- a/product-service/package.json
+++ b/product-service/package.json
@@ -2,7 +2,7 @@
   "name": "product-service",
   "version": "1.0.0",
   "description": "",
-  "main": "awsDocClient.js",
+  "main": "aws.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
