--- a/import-service/serverless.yml
+++ b/import-service/serverless.yml
@@ -11,40 +11,42 @@ provider:
     cors: true
   environment:
     REGION: ${self:provider.region}
+    BUCKET_NAME: ${env:BUCKET_NAME}
+    QUEUE_NAME: ${env:QUEUE_NAME}
+    SQS_URL: ${env:SQS_URL}
   iam:
     role:
       statements:
         - Effect: Allow
           Action:
             - 's3:ListBucket'
-          Resource: 'arn:aws:s3:::${env:BUCKET}'
+          Resource: 'arn:aws:s3:::${env:BUCKET_NAME}'
         - Effect: Allow
           Action:
             - 's3:*'
           Resource:
-            - 'arn:aws:s3:::${env:BUCKET}/*'
+            - 'arn:aws:s3:::${env:BUCKET_NAME}/*'
+        - Effect: Allow
+          Action: 'sqs:*'
+          Resource: 'arn:aws:sqs:eu-west-1:425140362966:${env:QUEUE_NAME}'
 
 functions:
   importProductsFile:
-    handler: handlers/importProductsFile.importProductsFile
+    handler: src/handlers/importProductsFile.importProductsFile
     events:
      - httpApi:
         method: GET
         path: /import
-    environment:
-      BucketName: ${env:BUCKET}
   importFileParser:
-    handler: handlers/importFileParser.importFileParser
+    handler: src/handlers/importFileParser.importFileParser
     events:
       - s3:
-          bucket: import-products-csv
+          bucket: ${env:BUCKET_NAME}
           event: s3:ObjectCreated:*
           rules:
             - prefix: uploaded
             - suffix: .csv
           existing: true
-    environment:
-      BucketName: ${env:BUCKET}
 
 
     
