--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -1,5 +1,5 @@
 service: product-service
-frameworkVersion: '3'
+frameworkVersion: "3"
 useDotenv: true
 plugins:
   - serverless-dotenv-plugin
@@ -23,14 +23,14 @@ provider:
     role:
       statements:
         - Effect: Allow
-          Action: 'sqs:*'
+          Action: "sqs:*"
           Resource:
-            - Fn::GetAtt: [ SQSQueue, Arn ]
+            - Fn::GetAtt: [SQSQueue, Arn]
         - Effect: Allow
-          Action: 'sns:*'
+          Action: "sns:*"
           Resource:
             Ref: SNSTopic
-  
+
 resources:
   Resources:
     SQSQueue:
@@ -53,23 +53,23 @@ functions:
   getProductsList:
     handler: src/handlers/getProductsList.getProductsList
     events:
-     - httpApi:
-        method: GET
-        path: /products
+      - httpApi:
+          method: GET
+          path: /products
     environment:
       StockTableName: ${env:STOCK_TABLE}
   getProductById:
     handler: src/handlers/getProductById.getProductById
     events:
-     - httpApi:
-        method: GET
-        path: /products/{productId}
+      - httpApi:
+          method: GET
+          path: /products/{productId}
   createProduct:
     handler: src/handlers/createProduct.createProduct
     events:
-     - httpApi:
-        method: POST
-        path: /products
+      - httpApi:
+          method: POST
+          path: /products
   catalogBatchProcess:
     handler: src/handlers/catalogBatchProcess.catalogBatchProcess
     events:
@@ -79,5 +79,3 @@ functions:
             Fn::GetAtt:
               - SQSQueue
               - Arn
-
-  
