--- a/product-service/package.json
+++ b/product-service/package.json
@@ -2,10 +2,9 @@
   "name": "product-service",
   "version": "1.0.0",
   "description": "",
-  "main": "aws.js",
+  "main": "src/utils/DynamoDB.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "sls deploy"
   },
   "author": "",
