--- a/import-service/package.json
+++ b/import-service/package.json
@@ -1,11 +1,10 @@
 {
   "name": "import-service",
   "version": "1.0.0",
-  "description": "",
+  "description": "Store app import-service",
   "main": "aws.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "sls deploy"
   },
   "author": "",
